# Alpha-Intern-Agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: backlog.seed.txt  com.alpha-intern.auto.plist  install-auto.md
src/alpha_intern/: __init__.py  cli.py  config.py
src/alpha_intern/agent/: __init__.py  auto.py  backlog.py  cards.py  context.py  loop.py  meta_reflect.py  prompts.py  provider.py  reflection.py  run_log.py  usage.py
src/alpha_intern/backtest/: __init__.py  metrics.py  walk_forward.py
src/alpha_intern/data/: __init__.py  loader.py
src/alpha_intern/features/: __init__.py  cross_sectional.py  technical.py
src/alpha_intern/memory/: __init__.py  skill_runner.py  skills.py  store.py
src/alpha_intern/models/: __init__.py  signal_model.py
src/alpha_intern/tools/: __init__.py  backtest_tools.py  data_tools.py  feature_tools.py  memory_tools.py  model_tools.py  registry.py  skill_tools.py  workspace.py
tests/: test_agent_loop.py  test_context_assembly.py  test_cross_sectional_features.py  test_data_tools.py  test_features.py  test_imports.py  test_memory_store.py  test_reflection.py  test_run_log.py  test_skill_runner.py  test_skills.py  test_tool_registry.py  test_tools_end_to_end.py  test_walk_forward.py  test_workspace.py
