[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-intern-agent"
version = "0.0.1"
description = "AlphaInternAgent — a lightweight, Hermes-style stock ML research agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AlphaInternAgent contributors" }]
keywords = ["quant", "research", "machine-learning", "backtest", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pydantic>=2.5",
    "typer>=0.9",
]

[project.optional-dependencies]
data = ["yfinance>=0.2"]
agent = ["anthropic>=0.40"]
dev = ["pytest>=7.4"]

[project.scripts]
alpha-intern = "alpha_intern.cli:app"

[project.urls]
Homepage = "https://github.com/z26qin/AlphaInternAgent"
Repository = "https://github.com/z26qin/AlphaInternAgent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
